# mlx-lazyserve

./: .gitignore  README.md  models.toml  pyproject.toml
deploy/: install.sh  service.env.example
deploy/nginx/: mlx-lazyserve.conf
launchd/: dev.influo.mlx-lazyserve.plist  mlx-lazyserve.sudoers
logs/: .gitkeep
src/mlx_lazyserve/: __init__.py  __main__.py  config.py  engine.py  firecrawl.py  manager.py  server.py  telegram.py
tests/: test_engine.py
